# page-know-how

./: .gitignore  _verify_skill_ctx.py  api_response.json  app.py  main.py  requirements.txt  task_queue.py  tmp_test_think_json.py
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
docs/: api.md  lancedb_v2_api.md  system_prompts_default.md
extractor/: builder.py  heading_tree.py  parser.py  policy_index.py
inference/: __init__.py  config.py  embedding_client.py  kh_info_client.py  llm_stream.py  pipeline.py  preview.py  prompts.py  react_loop.py  redis_stream.py  skills_runner.py  topic_locator.py
knowledge_core/: chunk_builder.py  clause_locator.py  prompts.py  registries.py  relation_crawler.py  sort_utils.py
llm/: client.py
page_knowledge/: _policy_index.json
reasoner/: SKILL_TRIGGER_TIMING.md  _registries.py  _sort_utils.py  agent_graph.py  engine.py  prompts.py  react_agent.py
redis_server/: README.md  __init__.py  client.py  models.py  requirements.txt  run.py  smoke_test.py  storage.py
retrieval_service/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
retrieval_service/app/: __init__.py  config.py  deps.py  main.py  schema.py  store.py
retrieval_service/app/routers/: chunks.py  health.py  meta.py  relations.py  search.py
retrieval_service/tests/: test_routes.py
scripts/: dump_default_system_prompts.py
skills/: __init__.py  double_check.py  evaluator.py  registry.py  runner.py  skills.md
test/: 4.22借款专题提示词.txt  _req_skill_v3.json  benchmark_models.py  jk_test_0423.xlsx  (+45 more)
(+1546 files in other folders)
