[project]
name = "retrieval-service"
version = "0.1.0"
description = "LanceDB-backed retrieval microservice (BM25 + vector + RRF) for page-know-how"
requires-python = ">=3.10"
dependencies = [
  "lancedb>=0.13",
  "pyarrow>=15",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "anyio>=4.4",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
